# teste2-ingestao-no-limite

./: .gitignore  Cargo.toml  Dockerfile  README.md  dataforma-hub_v2.json  requirements.txt
src/: main.py  main.rs
