[package]
name = "teste2-ingestao-no-limite"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6.6"
postgres = "0.19"
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
chrono = "0.4"
crossbeam-channel = "0.5.16"
ryu = "1.0.23"
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
